5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1716_2503.log
== TEST (2019-05-14 17:03:11) 
-- CODE:
k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:03:46) 
-- CODE:
k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:04:22) 
-- CODE:
k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont > k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:05:10) 
-- CODE:
k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:05:26) 
-- CODE:
k= float(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:05:35) 
-- CODE:
k= float(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:05:48) 
-- CODE:
k= float(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:06:00) 
-- CODE:
k= float(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:06:28) 
-- CODE:
k= float(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont != k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:06:40) 
-- CODE:
k= float(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont != k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:07:30) 
-- CODE:
k= float(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont <= k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:07:40) 
-- CODE:
k= float(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont <= k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:07:48) 
-- CODE:
k= float(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont <= k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:08:00) 
-- CODE:
k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont <= k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:08:25) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:10:02) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1
soma = k

while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(soma,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:10:10) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1
soma = k

while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(soma,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:10:13) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1
soma = k

while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(soma,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:12:33) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1
resultado = k

while (cont < k):
	resultado = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(resultado,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:12:39) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1
resultado = k

while (cont < k):
	resultado = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(resultado,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:12:44) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1
resultado = k

while (cont < k):
	resultado = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(resultado,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:15:12) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:15:28) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:15:57) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:16:23) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = 1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:16:28) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = 1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:16:36) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = 1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(k,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:16:43) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = 1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(k,8))
	
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:17:32) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(,8))
	
-- ERROR:
File "XXXX", line 14
    print(round(,8))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:18:15) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1
resultado = cont = cont + (sinal * (cont/deno))

while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(resultado,8))
	
-- ERROR:
File "XXXX", line 14
    print(round(,8))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:18:44) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1
resultado = cont = cont + (sinal * (cont/deno))

while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(resultado,8))
	
-- ERROR:
File "XXXX", line 14
    print(round(,8))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:22:38) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont / (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(,8))
	
-- ERROR:
File "XXXX", line 14
    print(round(,8))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:22:45) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont / (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
139.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:22:55) 
-- CODE:
from math import*

k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont / (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- OUTPUT:
139.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:38:16) 
-- CODE:
n = int(input("constante: "))
valor = 0

while (n == 1):
	if (n%2 == 1):
		valor = valor + (4/(2*n-1))
	else:
		valor = valor - (4/(2*n-1))
		
	n = n-1
	
print(round(valor,8))
	
	
-- OUTPUT:
139.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:38:26) 
-- CODE:
n = int(input("constante: "))
valor = 0

while (n == 1):
	if (n%2 == 1):
		valor = valor + (4/(2*n-1))
	else:
		valor = valor - (4/(2*n-1))
		
	n = n-1
	
print(round(valor,8))
	
	
-- EXECUTION TIME:
0.14255
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
0
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:38:40) 
-- CODE:
n = int(input("constante: "))
valor = 0

while (n >= 1):
	if (n%2 == 1):
		valor = valor + (4/(2*n-1))
	else:
		valor = valor - (4/(2*n-1))
		
	n = n-1
	
print(round(valor,8))
	
	
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:38:51) 
-- CODE:
n = int(input("constante: "))
valor = 0

while (n >= 1):
	if (n%2 == 1):
		valor = valor + (4/(2*n-1))
	else:
		valor = valor - (4/(2*n-1))
		
	n = n-1
	
print(round(valor,8))
	
	
-- EXECUTION TIME:
0.214128
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:01) 
-- CODE:
k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- EXECUTION TIME:
751.639
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:42:01) 
-- CODE:
k= int(input("Constante: "))

cont = 4
sinal = -1
deno = 1


while (cont < k):
	cont = cont + (sinal * (cont/deno))
	sinal = sinal * (-1)
	deno = deno + 2
print(round(cont,8))
	
-- EXECUTION TIME:
784.552
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:19:39) 
-- CODE:
n = int(input("constante: "))
valor = 0

while (n >= 1):
	if (n%2 == 1):
		valor = valor + (4/(2*n-1))
	else:
		valor = valor - (4/(2*n-1))
		
	n = n-1
	
print(round(valor,8))
	
	
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:19:44) 
-- CODE:
n = int(input("constante: "))
valor = 0

while (n >= 1):
	if (n%2 == 1):
		valor = valor + (4/(2*n-1))
	else:
		valor = valor - (4/(2*n-1))
		
	n = n-1
	
print(round(valor,8))
	
	
-- EXECUTION TIME:
0.203561
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
